--- a/index.html
+++ b/index.html
@@ -6,6 +6,55 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        
+        <div class="header">
+            <div class="logo">Header Logo</div>
+            <ul class="Links">
+                <li><a href="google.com">header link one</a></li>
+                <li><a href="google.com">header link two</a></li>
+                <li><a href="google.com">header link three</a></li>
+            </ul>
+        </div>
+
+        <div class="body">
+            <div class="container">
+                <div class="opening"> text and button go here</div>
+                <div class="image"> image placeholder here</div>
+            </div>
+            <div class="container">
+                <div class="Title">Some Random information</div>
+                <div class="information">
+                    <div class="info">
+                      <div class="blue-box"></div>
+                      <div class="text">This is some subtext under an illustration or image</div>
+                    </div>
+                    <div class="info">
+                      <div class="blue-box"></div>
+                      <div class="text">This is some subtext under an illustration or image</div>
+                    </div>
+                    <div class="info">
+                      <div class="blue-box"></div>
+                      <div class="text">This is some subtext under an illustration or image</div>
+                    </div>
+                    <div class="info">
+                      <div class="blue-box"></div>
+                      <div class="text">This is some subtext under an illustration or image</div>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="quote"><em>This is an inspiring quote, or a testimonial from a customer.
+                Maybe it's just filling up space, or maybe people will actually read it.
+                Who knows? All I know is that it looks nice.</em></div>
+                <div class="speaker">-Thor, God of Thunder</div>
+            <div class="container">
+                <div class="text"> 
+                    <p class="big">Call to action! It's time!</p>
+                    <p class="small"> Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <button>Sign Up</button>
+            </div>
+        </div>
+
+        <div class="footer"></div>
     </body>
 </html>
