--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <meta charset="UTF-8">
         <title>Practice Landing Page</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Roboto:ital,wght@0,100;0,400;0,900;1,100;1,400&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="header">
@@ -16,11 +19,15 @@
         </div>
 
         <div class="body">
-            <div class="container">
-                <div class="opening"> text and button go here</div>
+            <div class="container one">
+                <div class="opening">
+                    <div class="hero">This website is awesome</div>
+                    <div class="subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+                    <button>Sign up</button>
+                </div>
                 <div class="image"> image placeholder here</div>
             </div>
-            <div class="container">
+            <div class="container two">
                 <div class="Title">Some Random information</div>
                 <div class="information">
                     <div class="info">
@@ -41,12 +48,13 @@
                     </div>
                 </div>
             </div>
-            <div class="container">
+            <div class="container three">
                 <div class="quote"><em>This is an inspiring quote, or a testimonial from a customer.
                 Maybe it's just filling up space, or maybe people will actually read it.
                 Who knows? All I know is that it looks nice.</em></div>
                 <div class="speaker">-Thor, God of Thunder</div>
-            <div class="container">
+            </div>
+            <div class="container four">
                 <div class="text"> 
                     <p class="big">Call to action! It's time!</p>
                     <p class="small"> Sign up for our product by clicking that button right over there!</p>
@@ -55,6 +63,6 @@
             </div>
         </div>
 
-        <div class="footer"></div>
+        <div class="footer"> Copyright @ The Odin Project 2021</div>
     </body>
 </html>
