Fix typo for class=title
The class had a capital "T" inside of "t" so the style wasn't being
applied.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="image"> image placeholder here</div>
             </div>
             <div class="container two">
-                <div class="Title">Some Random information</div>
+                <div class="title">Some Random information</div>
                 <div class="information">
                     <div class="info">
                       <div class="blue-box"></div>
