--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <p class="big">Call to action! It's time!</p>
                     <p class="small"> Sign up for our product by clicking that button right over there!</p>
                 </div>
-                <button>Sign Up</button>
+                <button id="bottom">Sign Up</button>
             </div>
         </div>
 
