Fix margin and spacing
Gave each body container consistent margins and adjusted spacing
to match goal image more closely.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
                 <li><a href="google.com">header link three</a></li>
             </ul>
         </div>
-
         <div class="body">
             <div class="container one">
                 <div class="opening">
@@ -55,14 +54,15 @@
                 <div class="speaker">-Thor, God of Thunder</div>
             </div>
             <div class="container four">
-                <div class="text"> 
+                <div class="text2"> 
                     <p class="big">Call to action! It's time!</p>
                     <p class="small"> Sign up for our product by clicking that button right over there!</p>
                 </div>
                 <button id="bottom">Sign Up</button>
             </div>
         </div>
-
-        <div class="footer"> Copyright @ The Odin Project 2021</div>
+        <div class="footer"> 
+            <div class="copy">Copyright @ The Odin Project 2021</div>
+        </div>
     </body>
 </html>
